Updated the simulator to last version

--- a/lab2-us/GBM8378_Lab2_US_2021.ipynb
+++ b/lab2-us/GBM8378_Lab2_US_2021.ipynb
@@ -546,9 +546,11 @@
    "outputs": [],
    "source": [
     "## Title: Ultrasound Forward Simulator\n",
+    "## Filename: __main__.py\n",
     "## Authors: Jonathan Poree, Samuel Desmarais --- Provost Ultrasound Lab\n",
     "## Inspired from work in: Section 2.3 of https://doi.org/10.1088/1361-6560/aae3c3\n",
     "\n",
+    "import numpy as np\n",
     "from labUSfunctions import ussimforward, prepare_animation\n",
     "\n",
     "##################\n",
@@ -557,32 +559,34 @@
     "\n",
     "## PROBE\n",
     "prm = {}\n",
-    "prm['pitch'] = 0.5*1e-3  # Spacing between the center of 2 elements (m)\n",
-    "prm['width'] = 0.8117*1540/(14e6)  # Width of element (m)\n",
-    "prm['height'] = 1.5*1e-3  # Height of element (m)\n",
-    "prm['nele'] = 1  # Number of elements\n",
-    "prm['BW'] = .5  # 50% Bandwidth\n",
-    "prm['eleBW'] = 1  # 100% Bandwidth\n",
+    "prm['fc']       = 14e6  # Central frequency of the transducer (Hz)\n",
+    "prm['pitch']    = 0.5e-3  # Spacing between the center of 2 elements (m)\n",
+    "prm['width']    = 0.8117*1540/(14e6)  # Width of element (m)\n",
+    "prm['height']   = 1.5e-3  # Height of element (m)\n",
+    "prm['nele']     = 1  # Number of elements\n",
+    "prm['BW']       = 0.5  # 50% Pulse Bandwidth\n",
+    "prm['eleBW']    = 1  # 100% Bandwidth\n",
     "prm['hardbaffle'] = True  # Use hard baffle =True or soft baffle =False\n",
-    "prm['fc'] = 14e6  # Central frequency of the transducer (Hz)\n",
     "\n",
     "## MEDIUM\n",
-    "prm['c'] = 1540  # Propagation velocity (m/s)\n",
-    "prm['lbd'] = prm['c']/prm['fc']  # Wavelenght (m)\n",
+    "prm['c']        = 1540  # Propagation velocity (m/s)\n",
+    "prm['lbd']      = prm['c']/prm['fc']  # Wavelenght (m)\n",
     "\n",
     "## IMAGING SEQUENCE\n",
-    "prm['fs'] = 4 * prm['fc']  # Sampling frequency of the system (Hz)\n",
+    "prm['fs']        = 4 * prm['fc']  # Sampling frequency of the system (Hz)\n",
     "prm['elevfocus'] = 64 * prm['lbd']\n",
-    "prm['fspulse'] = 10*prm['fs']  # Sampling frequency for the pulse (Hz)\n",
-    "prm['pulse'] = np.sin(2*np.pi*prm['fc']*np.arange(0, 2/prm['BW']/prm['fc']+1/prm['fspulse'], 1/prm['fspulse']))\n",
-    "prm['pulse'] = prm['pulse'] * np.hanning(prm['pulse'].size)  # Pulse Shape\n",
+    "prm['fspulse']   = 10*prm['fs']  # Sampling frequency for the pulse (Hz)\n",
+    "prm['pulse']     = np.sin(2*np.pi*prm['fc']*np.arange(0, 2/prm['BW']/prm['fc']+1/prm['fspulse'], 1/prm['fspulse']))\n",
+    "prm['pulse']     = prm['pulse'] * np.hanning(prm['pulse'].size)  # Shape of the pulse\n",
     "prm['planewaveangle'] = 0  # Plane wave emission angle (degrees)\n",
     "\n",
     "## SIMULATION\n",
     "prm['useprobeheight'] = False  # Take probe height into account =True or not =False\n",
     "prm['gridsize'] = 256  # Number of samples per side of the grid\n",
-    "prm['fovx'] = prm['pitch'] * 25.6  # Lateral field of view (m)\n",
-    "prm['fovz'] = prm['lbd'] * 128  # Axial field of view (m)\n",
+    "prm['fovx'] = prm['lbd'] * 64  # Lateral field of view (m)\n",
+    "prm['fovz'] = prm['lbd'] * 64  # Axial field of view (m)\n",
+    "prm['floatprecision'] = np.float32  # Float arrays precision\n",
+    "prm['complexprecision'] = np.complex64  # Complex arrays precision\n",
     "\n",
     "#############\n",
     "### SETUP ###\n",
@@ -593,7 +597,7 @@
     "ygrid = np.zeros_like(xgrid)\n",
     "\n",
     "## Delays Definition\n",
-    "delays = [0.]    # Firing time of the different transductors\n",
+    "delays = np.array([0.])\n",
     "\n",
     "## Apodization Definition\n",
     "apod = np.ones_like(delays)\n",
@@ -601,7 +605,7 @@
     "##################\n",
     "### SIMULATION ###\n",
     "##################\n",
-    "RF = ussimforward(xgrid, ygrid, zgrid, delays, apod, prm)\n",
+    "RF = ussimforward(xgrid, ygrid, zgrid, delays, apod, prm)  # Call to the simulation function\n",
     "\n",
     "######################\n",
     "### OUTPUT US WAVE ###\n",
@@ -635,7 +639,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>4.3. A quoi ressemble le champ de pression à un instant t fixe (t ≈ 5µs) ?(0.5pt) </b><br>\n",
+    "<div class=\"alert alert-block alert-warning\"><b>4.3. A quoi ressemble le champ de pression à un instant t fixe (t ≈ 3µs) ?(0.5pt) </b><br>\n",
     "Affichez l'image contenue dans la matrice RF qui correspond à l'état du front d'onde au moment t. Utilisez les paramètres de la simulation pour trouver l'indice de cette image. \n",
     "</div>"
    ]
@@ -676,32 +680,34 @@
     "\n",
     "## PROBE\n",
     "prm = {}\n",
-    "prm['pitch'] = 0.5*1e-3  # Spacing between the center of 2 elements (m)\n",
-    "prm['width'] = 0.8117*1540/(14e6)  # Width of element (m)\n",
-    "prm['height'] = 1.5*1e-3  # Height of element (m)\n",
-    "prm['nele'] = 1  # Number of elements\n",
-    "prm['BW'] = .5  # 50% Bandwidth\n",
-    "prm['eleBW'] = 1  # 100% Bandwidth\n",
+    "prm['fc']       = 14e6  # Central frequency of the transducer (Hz)\n",
+    "prm['pitch']    = 0.5e-3  # Spacing between the center of 2 elements (m)\n",
+    "prm['width']    = 0.8117*1540/(14e6)  # Width of element (m)\n",
+    "prm['height']   = 1.5e-3  # Height of element (m)\n",
+    "prm['nele']     = 1  # Number of elements\n",
+    "prm['BW']       = 0.5  # 50% Pulse Bandwidth\n",
+    "prm['eleBW']    = 1  # 100% Bandwidth\n",
     "prm['hardbaffle'] = True  # Use hard baffle =True or soft baffle =False\n",
-    "prm['fc'] = 14e6  # Central frequency of the transducer (Hz)\n",
     "\n",
     "## MEDIUM\n",
-    "prm['c'] = 1540  # Propagation velocity (m/s)\n",
-    "prm['lbd'] = prm['c']/prm['fc']  # Wavelenght (m)\n",
+    "prm['c']        = 1540  # Propagation velocity (m/s)\n",
+    "prm['lbd']      = prm['c']/prm['fc']  # Wavelenght (m)\n",
     "\n",
     "## IMAGING SEQUENCE\n",
-    "prm['fs'] = 4 * prm['fc']  # Sampling frequency of the system (Hz)\n",
+    "prm['fs']        = 4 * prm['fc']  # Sampling frequency of the system (Hz)\n",
     "prm['elevfocus'] = 64 * prm['lbd']\n",
-    "prm['fspulse'] = 10*prm['fs']  # Sampling frequency for the pulse (Hz)\n",
-    "prm['pulse'] = np.sin(2*np.pi*prm['fc']*np.arange(0, 2/prm['BW']/prm['fc']+1/prm['fspulse'], 1/prm['fspulse']))\n",
-    "prm['pulse'] = prm['pulse'] * np.hanning(prm['pulse'].size)  # Pulse Shape\n",
+    "prm['fspulse']   = 10*prm['fs']  # Sampling frequency for the pulse (Hz)\n",
+    "prm['pulse']     = np.sin(2*np.pi*prm['fc']*np.arange(0, 2/prm['BW']/prm['fc']+1/prm['fspulse'], 1/prm['fspulse']))\n",
+    "prm['pulse']     = prm['pulse'] * np.hanning(prm['pulse'].size)  # Shape of the pulse\n",
     "prm['planewaveangle'] = 0  # Plane wave emission angle (degrees)\n",
     "\n",
     "## SIMULATION\n",
     "prm['useprobeheight'] = False  # Take probe height into account =True or not =False\n",
     "prm['gridsize'] = 256  # Number of samples per side of the grid\n",
-    "prm['fovx'] = prm['pitch'] * 25.6  # Lateral field of view (m)\n",
-    "prm['fovz'] = prm['lbd'] * 128  # Axial field of view (m)\n",
+    "prm['fovx'] = prm['lbd'] * 64  # Lateral field of view (m)\n",
+    "prm['fovz'] = prm['lbd'] * 64  # Axial field of view (m)\n",
+    "prm['floatprecision'] = np.float32  # Float arrays precision\n",
+    "prm['complexprecision'] = np.complex64  # Complex arrays precision\n",
     "\n",
     "#############\n",
     "### SETUP ###\n",
@@ -712,7 +718,7 @@
     "ygrid = np.zeros_like(xgrid)\n",
     "\n",
     "## Delays Definition\n",
-    "delays = [0.]    # Firing time of the different transductors\n",
+    "delays = np.array([0.])\n",
     "\n",
     "## Apodization Definition\n",
     "apod = np.ones_like(delays)\n",
@@ -720,7 +726,7 @@
     "##################\n",
     "### SIMULATION ###\n",
     "##################\n",
-    "RF = ussimforward(xgrid, ygrid, zgrid, delays, apod, prm)\n",
+    "RF = ussimforward(xgrid, ygrid, zgrid, delays, apod, prm)  # Call to the simulation function\n",
     "\n",
     "######################\n",
     "### OUTPUT US WAVE ###\n",
@@ -740,13 +746,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>4.5. Toujours avec 10 éléments, faire une fonction qui viendra modifier le vecteur 'delays' afin d’obtenir une onde plane à un angle de 10°. Affichez le front d’onde après 5µs. (1.5pts) </b><br>\n",
+    "<div class=\"alert alert-block alert-warning\"><b>4.5. Toujours avec 10 éléments, faire une fonction qui viendra modifier le vecteur 'delays' afin d’obtenir une onde plane à un angle de 10°. Affichez le front d’onde après 3µs. (1.5pts) </b><br>\n",
     "Delays prend des valeurs en s. </div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,32 +762,34 @@
     "\n",
     "## PROBE\n",
     "prm = {}\n",
-    "prm['pitch'] = 0.5*1e-3  # Spacing between the center of 2 elements (m)\n",
-    "prm['width'] = 0.8117*1540/(14e6)  # Width of element (m)\n",
-    "prm['height'] = 1.5*1e-3  # Height of element (m)\n",
-    "prm['nele'] = 1  # Number of elements\n",
-    "prm['BW'] = .5  # 50% Bandwidth\n",
-    "prm['eleBW'] = 1  # 100% Bandwidth\n",
+    "prm['fc']       = 14e6  # Central frequency of the transducer (Hz)\n",
+    "prm['pitch']    = 0.5e-3  # Spacing between the center of 2 elements (m)\n",
+    "prm['width']    = 0.8117*1540/(14e6)  # Width of element (m)\n",
+    "prm['height']   = 1.5e-3  # Height of element (m)\n",
+    "prm['nele']     = 1  # Number of elements\n",
+    "prm['BW']       = 0.5  # 50% Pulse Bandwidth\n",
+    "prm['eleBW']    = 1  # 100% Bandwidth\n",
     "prm['hardbaffle'] = True  # Use hard baffle =True or soft baffle =False\n",
-    "prm['fc'] = 14e6  # Central frequency of the transducer (Hz)\n",
     "\n",
     "## MEDIUM\n",
-    "prm['c'] = 1540  # Propagation velocity (m/s)\n",
-    "prm['lbd'] = prm['c']/prm['fc']  # Wavelenght (m)\n",
+    "prm['c']        = 1540  # Propagation velocity (m/s)\n",
+    "prm['lbd']      = prm['c']/prm['fc']  # Wavelenght (m)\n",
     "\n",
     "## IMAGING SEQUENCE\n",
-    "prm['fs'] = 4 * prm['fc']  # Sampling frequency of the system (Hz)\n",
+    "prm['fs']        = 4 * prm['fc']  # Sampling frequency of the system (Hz)\n",
     "prm['elevfocus'] = 64 * prm['lbd']\n",
-    "prm['fspulse'] = 10*prm['fs']  # Sampling frequency for the pulse (Hz)\n",
-    "prm['pulse'] = np.sin(2*np.pi*prm['fc']*np.arange(0, 2/prm['BW']/prm['fc']+1/prm['fspulse'], 1/prm['fspulse']))\n",
-    "prm['pulse'] = prm['pulse'] * np.hanning(prm['pulse'].size)  # Pulse Shape\n",
+    "prm['fspulse']   = 10*prm['fs']  # Sampling frequency for the pulse (Hz)\n",
+    "prm['pulse']     = np.sin(2*np.pi*prm['fc']*np.arange(0, 2/prm['BW']/prm['fc']+1/prm['fspulse'], 1/prm['fspulse']))\n",
+    "prm['pulse']     = prm['pulse'] * np.hanning(prm['pulse'].size)  # Shape of the pulse\n",
     "prm['planewaveangle'] = 0  # Plane wave emission angle (degrees)\n",
     "\n",
     "## SIMULATION\n",
     "prm['useprobeheight'] = False  # Take probe height into account =True or not =False\n",
     "prm['gridsize'] = 256  # Number of samples per side of the grid\n",
-    "prm['fovx'] = prm['pitch'] * 25.6  # Lateral field of view (m)\n",
-    "prm['fovz'] = prm['lbd'] * 128  # Axial field of view (m)\n",
+    "prm['fovx'] = prm['lbd'] * 64  # Lateral field of view (m)\n",
+    "prm['fovz'] = prm['lbd'] * 64  # Axial field of view (m)\n",
+    "prm['floatprecision'] = np.float32  # Float arrays precision\n",
+    "prm['complexprecision'] = np.complex64  # Complex arrays precision\n",
     "\n",
     "#############\n",
     "### SETUP ###\n",
@@ -792,7 +800,7 @@
     "ygrid = np.zeros_like(xgrid)\n",
     "\n",
     "## Delays Definition\n",
-    "delays = [0.]    # Firing time of the different transductors\n",
+    "delays = np.array([0.])\n",
     "\n",
     "## Apodization Definition\n",
     "apod = np.ones_like(delays)\n",
@@ -800,7 +808,7 @@
     "##################\n",
     "### SIMULATION ###\n",
     "##################\n",
-    "RF = ussimforward(xgrid, ygrid, zgrid, delays, apod, prm)\n",
+    "RF = ussimforward(xgrid, ygrid, zgrid, delays, apod, prm)  # Call to the simulation function\n",
     "\n",
     "######################\n",
     "### OUTPUT US WAVE ###\n",
@@ -842,7 +850,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>4.8. Adaptez le paramètre 'delays' afin d'effectuer un focus en x=3mm et z=8mm. Expliquez vos résultats. (1.5pts)</b>\n",
+    "<div class=\"alert alert-block alert-warning\"><b>4.8. Adaptez le paramètre 'delays' afin d'effectuer un focus en x=3mm et z=5mm. Expliquez vos résultats. (1.5pts)</b>\n",
     "</div>"
    ]
   },
@@ -858,32 +866,34 @@
     "\n",
     "## PROBE\n",
     "prm = {}\n",
-    "prm['pitch'] = 0.5*1e-3  # Spacing between the center of 2 elements (m)\n",
-    "prm['width'] = 0.8117*1540/(14e6)  # Width of element (m)\n",
-    "prm['height'] = 1.5*1e-3  # Height of element (m)\n",
-    "prm['nele'] = 1  # Number of elements\n",
-    "prm['BW'] = .5  # 50% Bandwidth\n",
-    "prm['eleBW'] = 1  # 100% Bandwidth\n",
+    "prm['fc']       = 14e6  # Central frequency of the transducer (Hz)\n",
+    "prm['pitch']    = 0.5e-3  # Spacing between the center of 2 elements (m)\n",
+    "prm['width']    = 0.8117*1540/(14e6)  # Width of element (m)\n",
+    "prm['height']   = 1.5e-3  # Height of element (m)\n",
+    "prm['nele']     = 1  # Number of elements\n",
+    "prm['BW']       = 0.5  # 50% Pulse Bandwidth\n",
+    "prm['eleBW']    = 1  # 100% Bandwidth\n",
     "prm['hardbaffle'] = True  # Use hard baffle =True or soft baffle =False\n",
-    "prm['fc'] = 14e6  # Central frequency of the transducer (Hz)\n",
     "\n",
     "## MEDIUM\n",
-    "prm['c'] = 1540  # Propagation velocity (m/s)\n",
-    "prm['lbd'] = prm['c']/prm['fc']  # Wavelenght (m)\n",
+    "prm['c']        = 1540  # Propagation velocity (m/s)\n",
+    "prm['lbd']      = prm['c']/prm['fc']  # Wavelenght (m)\n",
     "\n",
     "## IMAGING SEQUENCE\n",
-    "prm['fs'] = 4 * prm['fc']  # Sampling frequency of the system (Hz)\n",
+    "prm['fs']        = 4 * prm['fc']  # Sampling frequency of the system (Hz)\n",
     "prm['elevfocus'] = 64 * prm['lbd']\n",
-    "prm['fspulse'] = 10*prm['fs']  # Sampling frequency for the pulse (Hz)\n",
-    "prm['pulse'] = np.sin(2*np.pi*prm['fc']*np.arange(0, 2/prm['BW']/prm['fc']+1/prm['fspulse'], 1/prm['fspulse']))\n",
-    "prm['pulse'] = prm['pulse'] * np.hanning(prm['pulse'].size)  # Pulse Shape\n",
+    "prm['fspulse']   = 10*prm['fs']  # Sampling frequency for the pulse (Hz)\n",
+    "prm['pulse']     = np.sin(2*np.pi*prm['fc']*np.arange(0, 2/prm['BW']/prm['fc']+1/prm['fspulse'], 1/prm['fspulse']))\n",
+    "prm['pulse']     = prm['pulse'] * np.hanning(prm['pulse'].size)  # Shape of the pulse\n",
     "prm['planewaveangle'] = 0  # Plane wave emission angle (degrees)\n",
     "\n",
     "## SIMULATION\n",
     "prm['useprobeheight'] = False  # Take probe height into account =True or not =False\n",
     "prm['gridsize'] = 256  # Number of samples per side of the grid\n",
-    "prm['fovx'] = prm['pitch'] * 25.6  # Lateral field of view (m)\n",
-    "prm['fovz'] = prm['lbd'] * 128  # Axial field of view (m)\n",
+    "prm['fovx'] = prm['lbd'] * 64  # Lateral field of view (m)\n",
+    "prm['fovz'] = prm['lbd'] * 64  # Axial field of view (m)\n",
+    "prm['floatprecision'] = np.float32  # Float arrays precision\n",
+    "prm['complexprecision'] = np.complex64  # Complex arrays precision\n",
     "\n",
     "#############\n",
     "### SETUP ###\n",
@@ -894,7 +904,7 @@
     "ygrid = np.zeros_like(xgrid)\n",
     "\n",
     "## Delays Definition\n",
-    "delays = [0.]    # Firing time of the different transductors\n",
+    "delays = np.array([0.])\n",
     "\n",
     "## Apodization Definition\n",
     "apod = np.ones_like(delays)\n",
@@ -902,7 +912,7 @@
     "##################\n",
     "### SIMULATION ###\n",
     "##################\n",
-    "RF = ussimforward(xgrid, ygrid, zgrid, delays, apod, prm)\n",
+    "RF = ussimforward(xgrid, ygrid, zgrid, delays, apod, prm)  # Call to the simulation function\n",
     "\n",
     "######################\n",
     "### OUTPUT US WAVE ###\n",
@@ -922,7 +932,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>4.9. Sur la figure de droite, en dehors du point de focalisation, nous observons des zones présentant de fortes intensités acoustiques (e.g. [x=1mm, z=9mm]). A quoi cela est-il-dû ? (0.5pt)\n",
+    "<div class=\"alert alert-block alert-warning\"><b>4.9. Sur la figure de droite, en dehors du point de focalisation, nous observons des zones présentant de fortes intensités acoustiques (e.g. [x=2mm, z=6mm]). A quoi cela est-il-dû ? (0.5pt)\n",
     "</b></div> "
    ]
   },
@@ -951,7 +961,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>4.11. En faisant suite à la question 4.9, on observe que les zones non focalisées présentent une intensité acoustique du même ordre de grandeur que l'intensité en [x=3mm, z=8mm]. Comment expliquez-vous que, malgré cela, on puisse obtenir une image de qualité satisfaisante en mode B. (0.5pt)</b></div> "
+    "<div class=\"alert alert-block alert-warning\"><b>4.11. En faisant suite à la question 4.9, on observe que les zones non focalisées présentent une intensité acoustique du même ordre de grandeur que l'intensité en [x=3mm, z=5mm]. Comment expliquez-vous que, malgré cela, on puisse obtenir une image de qualité satisfaisante en mode B. (0.5pt)</b></div> "
    ]
   },
   {
