Added questions about 2D FFT.

--- a/lab0-intro/GBM8378_Lab0_Intro.ipynb
+++ b/lab0-intro/GBM8378_Lab0_Intro.ipynb
@@ -245,6 +245,8 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt # Permet de tracer des graphiques et d'afficher des images\n",
+    "# Faire en sorte que les résultats soient affichés correctement dans le jupyter notebook:\n",
+    "%matplotlib inline\n",
     "\n",
     "# Codez votre solution ici"
    ]
@@ -392,10 +394,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercice 2: Signal bruité\n",
+    "# Exercice 2: Création d'un signal bruité\n",
     "\n",
     "**Question 2.1.** Créer un vecteur temps ayant un pas temporel de une milliseconde (c’est à dire:\n",
-    "échantillonné à 1000 Hz (Fs)) et contenant 1024 points.\n"
+    "échantillonné à 1000 Hz) et contenant 256 points."
    ]
   },
   {
@@ -506,7 +508,7 @@
     "# Exercice 3: Filtrage\n",
     "\n",
     "**Question 3.1.** Filtrer le signal bruité (2.5.) à l’aide d’un filtre de Butterworth du deuxième ordre passe bas\n",
-    "à 90 Hz (Fc). Note: La “Normalized cutoff frequency” de Butterworth est ici égale à Fc/(Fs/2).\n",
+    "à 20 Hz (Fc). Note: La “Normalized cutoff frequency” de Butterworth est ici égale à Fc/(Fs/2).\n",
     "\n",
     "Astuce: Utilisez les fonctions <a href=\"https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.butter.html\"> scipy.signal.butter()</a> et <a href=\"https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.filtfilt.html\"> scipy.signal.filtfilt()</a>"
    ]
@@ -561,9 +563,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercice 4: Transformée de Fourier\n",
+    "# Exercice 4: Transformée de Fourier d'un signal 1D\n",
     "\n",
-    "**Question 4.1.** Afficher la transformée de Fourier du signal bruité de 2.5."
+    "**Question 4.1.** Afficher la transformée de Fourier du signal bruité de 2.5.\n",
+    "Pour cette partie, nous utiliserons les fonctions de la librairie [numpy.fft](https://numpy.org/doc/stable/reference/routines.fft.html)."
    ]
   },
   {
@@ -572,6 +575,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Nous importons ici l'ensemble des fonctions de la librairie numpy.fft\n",
     "from numpy.fft import *\n",
     "\n",
     "# Codez votre solution ici"
@@ -630,7 +634,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercice 5: Fonction 3D\n",
+    "# Exercice 5: Transformée de Fourier d'un signal 2D\n",
     "\n",
     "**Question 5.1.**  Utiliser la fonction <a href=\"https://numpy.org/doc/stable/reference/generated/numpy.meshgrid.html\"> numpy.meshgrid()</a> pour former une matrice de coordonnées, dont le contenu\n",
     "contient des valeurs entre -0.1 et 0.1 avec un pas de 0.002."
@@ -650,7 +654,7 @@
    "metadata": {},
    "source": [
     "**Question 5.2.** Former une matrice où $z(x,y) = sin(\\pi\\times(20x+10y))$, en utilisant la matrice créée à la\n",
-    "question précédente."
+    "question précédente. Afficher z(x,y) en nuances de gris. Ajouter une barre de \"couleur\"."
    ]
   },
   {
@@ -666,15 +670,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 5.3.** Afficher z(x,y) en nuances de gris. Ajouter une barre de \"couleur\"."
+    "**Question 5.3.** A l'aide de la fonction [numpy.fft2](https://numpy.org/doc/stable/reference/generated/numpy.fft.fft2.html), calculer la transformée de Fourier Z(u,v) de z(x,y). Afficher l'amplitude de Z(u,v)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Codez votre solution ici"
@@ -684,8 +686,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 5.3.** Afficher z(x,y) en 3D.\n",
-    "Astuce: Cette <a href =\"https://www.tutorialspoint.com/matplotlib/matplotlib_3d_surface_plot.htm\">page</a> vous montrera comment afficher une surface en 3D."
+    "**Question 5.4.** De la même manière que précédemment, créer une matrice $w(x,y) = sin(\\pi\\times(-60x+60y))$. Calculer et afficher l'amplitude de W(u,v)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Codez votre solution ici"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 5.5.** Ajouter les matrices w(x, y) et z(u, v). Calculer et afficher l'amplitude de la FFT de la matrice ainsi obtenue."
    ]
   },
   {
@@ -714,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
