Update figure size and FOV for simulations + focus position

--- a/lab2-us/GBM8378_Lab2_US_2021.ipynb
+++ b/lab2-us/GBM8378_Lab2_US_2021.ipynb
@@ -532,6 +532,8 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\"><b>4.1. Utilisez le script ci-dessous pour afficher le champ de pression émis par un transducteur composé d'un unique élément au cours du temps. Expliquez les résultats obtenus. (0.5pt)</b><br>\n",
+    "\n",
+    "**Conseil:** Lorsque votre solution vous semble satisfaisante, vous pouvez passer `prm['gridsize']` à **256** ou **512** pour obtenir de meilleure images (les simulations prendront beaucoup plus de temps).\n",
     "</div>"
    ]
   },
@@ -548,7 +550,6 @@
     "## Authors: Jonathan Poree, Samuel Desmarais --- Provost Ultrasound Lab\n",
     "## Inspired from work in: Section 2.3 of https://doi.org/10.1088/1361-6560/aae3c3\n",
     "\n",
-    "import numpy as np\n",
     "from labUSfunctions import ussimforward, prepare_animation\n",
     "\n",
     "##################\n",
@@ -557,9 +558,9 @@
     "\n",
     "## PROBE\n",
     "prm = {}\n",
-    "prm['fc']       = 14e6  # Central frequency of the transducer (Hz)\n",
+    "prm['fc']       = 15.625e6  # Central frequency of the transducer (Hz)\n",
     "prm['pitch']    = 0.1e-3  # Spacing between the center of 2 elements (m)\n",
-    "prm['width']    = 0.8117*1540/(14e6)  # Width of element (m)\n",
+    "prm['width']    = 0.8117*1540/prm['fc']  # Width of element (m)\n",
     "prm['height']   = 1.5e-3  # Height of element (m)\n",
     "prm['nele']     = 1  # Number of elements\n",
     "prm['BW']       = 0.5  # 50% Pulse Bandwidth\n",
@@ -580,9 +581,9 @@
     "\n",
     "## SIMULATION\n",
     "prm['useprobeheight'] = False  # Take probe height into account =True or not =False\n",
-    "prm['gridsize'] = 256  # Number of samples per side of the grid\n",
-    "prm['fovx'] = prm['lbd'] * 32  # Lateral field of view (m)\n",
-    "prm['fovz'] = prm['lbd'] * 32  # Axial field of view (m)\n",
+    "prm['gridsize'] = 128  # Number of samples per side of the grid\n",
+    "prm['fovx'] = prm['lbd'] * 64  # Lateral field of view (m)\n",
+    "prm['fovz'] = prm['lbd'] * 128  # Axial field of view (m)\n",
     "prm['floatprecision'] = np.float32  # Float arrays precision\n",
     "prm['complexprecision'] = np.complex64  # Complex arrays precision\n",
     "\n",
@@ -678,9 +679,9 @@
     "\n",
     "## PROBE\n",
     "prm = {}\n",
-    "prm['fc']       = 14e6  # Central frequency of the transducer (Hz)\n",
+    "prm['fc']       = 15.625e6  # Central frequency of the transducer (Hz)\n",
     "prm['pitch']    = 0.1e-3  # Spacing between the center of 2 elements (m)\n",
-    "prm['width']    = 0.8117*1540/(14e6)  # Width of element (m)\n",
+    "prm['width']    = 0.8117*1540/prm['fc']  # Width of element (m)\n",
     "prm['height']   = 1.5e-3  # Height of element (m)\n",
     "prm['nele']     = 1  # Number of elements\n",
     "prm['BW']       = 0.5  # 50% Pulse Bandwidth\n",
@@ -701,9 +702,9 @@
     "\n",
     "## SIMULATION\n",
     "prm['useprobeheight'] = False  # Take probe height into account =True or not =False\n",
-    "prm['gridsize'] = 256  # Number of samples per side of the grid\n",
-    "prm['fovx'] = prm['lbd'] * 32  # Lateral field of view (m)\n",
-    "prm['fovz'] = prm['lbd'] * 32  # Axial field of view (m)\n",
+    "prm['gridsize'] = 128  # Number of samples per side of the grid\n",
+    "prm['fovx'] = prm['lbd'] * 64  # Lateral field of view (m)\n",
+    "prm['fovz'] = prm['lbd'] * 128  # Axial field of view (m)\n",
     "prm['floatprecision'] = np.float32  # Float arrays precision\n",
     "prm['complexprecision'] = np.complex64  # Complex arrays precision\n",
     "\n",
@@ -760,9 +761,9 @@
     "\n",
     "## PROBE\n",
     "prm = {}\n",
-    "prm['fc']       = 14e6  # Central frequency of the transducer (Hz)\n",
+    "prm['fc']       = 15.625e6  # Central frequency of the transducer (Hz)\n",
     "prm['pitch']    = 0.1e-3  # Spacing between the center of 2 elements (m)\n",
-    "prm['width']    = 0.8117*1540/(14e6)  # Width of element (m)\n",
+    "prm['width']    = 0.8117*1540/prm['fc']  # Width of element (m)\n",
     "prm['height']   = 1.5e-3  # Height of element (m)\n",
     "prm['nele']     = 1  # Number of elements\n",
     "prm['BW']       = 0.5  # 50% Pulse Bandwidth\n",
@@ -783,9 +784,9 @@
     "\n",
     "## SIMULATION\n",
     "prm['useprobeheight'] = False  # Take probe height into account =True or not =False\n",
-    "prm['gridsize'] = 256  # Number of samples per side of the grid\n",
-    "prm['fovx'] = prm['lbd'] * 32  # Lateral field of view (m)\n",
-    "prm['fovz'] = prm['lbd'] * 32  # Axial field of view (m)\n",
+    "prm['gridsize'] = 128  # Number of samples per side of the grid\n",
+    "prm['fovx'] = prm['lbd'] * 64  # Lateral field of view (m)\n",
+    "prm['fovz'] = prm['lbd'] * 128  # Axial field of view (m)\n",
     "prm['floatprecision'] = np.float32  # Float arrays precision\n",
     "prm['complexprecision'] = np.complex64  # Complex arrays precision\n",
     "\n",
@@ -848,7 +849,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>4.8. Toujours avec 10 élements, adaptez le paramètre 'delays' afin d'effectuer un focus en x=0.5mm et z=1.5mm. Expliquez vos résultats. (1.5pts)</b>\n",
+    "<div class=\"alert alert-block alert-warning\"><b>4.8. Toujours avec 10 élements, adaptez le paramètre 'delays' afin d'effectuer un focus en x=0.5mm et z=2mm. Expliquez vos résultats. (1.5pts)</b>\n",
     "</div>"
    ]
   },
@@ -864,10 +865,10 @@
     "\n",
     "## PROBE\n",
     "prm = {}\n",
-    "prm['fc']       = 14e6  # Central frequency of the transducer (Hz)\n",
+    "prm['fc']       = 15.625e6  # Central frequency of the transducer (Hz)\n",
     "prm['pitch']    = 0.1e-3  # Spacing between the center of 2 elements (m)\n",
-    "prm['width']    = 0.8117*1540/(14e6)  # Width of element (m)\n",
-    "prm['height']   = 1.1e-3  # Height of element (m)\n",
+    "prm['width']    = 0.8117*1540/prm['fc']  # Width of element (m)\n",
+    "prm['height']   = 1.5e-3  # Height of element (m)\n",
     "prm['nele']     = 1  # Number of elements\n",
     "prm['BW']       = 0.5  # 50% Pulse Bandwidth\n",
     "prm['eleBW']    = 1  # 100% Bandwidth\n",
@@ -887,9 +888,9 @@
     "\n",
     "## SIMULATION\n",
     "prm['useprobeheight'] = False  # Take probe height into account =True or not =False\n",
-    "prm['gridsize'] = 256  # Number of samples per side of the grid\n",
+    "prm['gridsize'] = 128  # Number of samples per side of the grid\n",
     "prm['fovx'] = prm['lbd'] * 32  # Lateral field of view (m)\n",
-    "prm['fovz'] = prm['lbd'] * 32  # Axial field of view (m)\n",
+    "prm['fovz'] = prm['lbd'] * 64  # Axial field of view (m)\n",
     "prm['floatprecision'] = np.float32  # Float arrays precision\n",
     "prm['complexprecision'] = np.complex64  # Complex arrays precision\n",
     "\n",
